fix: scrollbars showing when transitioning thru firstrun routes. (liga-26)

--- a/app/renderer/screens/firstrun/assets/styles.scss
+++ b/app/renderer/screens/firstrun/assets/styles.scss
@@ -1,6 +1,11 @@
 @import '~renderer/assets/shared';
 
 
+html {
+  overflow-x: hidden;
+}
+
+
 #firstrun {
   width: 100%;
   padding-top: 20px;
